# chatterino2

./: .gitignore  .travis.yml  BUILDING_ON_WINDOWS.md  CMakeLists.txt  appveyor.yml  conanfile.txt  peru.yaml
.github/workflows/: build.yml  test.yml
cmake/: FindLibCommuni.cmake  FindLibcommuni.cmake  FindQtkeychain.cmake  buildqmakepro.cmake
lib/: CMakeLists.txt  FindHumanize.cmake  FindLibcommuni.cmake  FindQtkeychain.cmake  FindRapidjson.cmake  FindSerialize.cmake  FindSettings.cmake  FindSignals.cmake  FindWebsocketpp.cmake  FindWinToast.cmake  Libcommuni.cmake  libcommuni-patch.pro  qtkeychain.pri
lib/angelscript_add_on/scriptstdstring/: scriptstdstring.cpp
src/: Application.cpp  Application.hpp  CMakeLists.txt
src/providers/emoji/: Emojis.cpp
src/scripting/: ScriptEngine.cpp  ScriptEngine.hpp
tests/: CMakeLists.txt
tests/src/: Emojis.cpp
